# src/main/resources/openapi/mdb-lite-spec.yml
@@ -9,25 +9,25 @@ servers:
 security:
   - BEARER_JWT: [ ]
 paths:
-  /movies:
+  /books:
     get:
       tags:
-        - Movies
-      description: Find all movies.
-      operationId: getMovies
+        - Books
+      description: Find all books.
+      operationId: getBooks
       parameters:
-        - name: movieQueryParams
+        - name: bookQueryParams
           in: query
           required: true
           schema:
-            $ref: '#/components/schemas/MovieQueryParams'
+            $ref: '#/components/schemas/BookQueryParams'
           style: form
           explode: true
         - name: pagingCriteria
           in: query
           required: true
           schema:
-            $ref: '#/components/schemas/MoviePagingCriteria'
+            $ref: '#/components/schemas/BookPagingCriteria'
           style: form
           explode: true
       responses:
@@ -36,27 +36,27 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/MoviePageDto'
+                $ref: '#/components/schemas/BookPageDto'
         "500":
           $ref: '#/components/responses/InternalError'
     post:
       tags:
-        - Movies
-      description: Create a new movie.
-      operationId: createMovie
+        - Books
+      description: Create a new book.
+      operationId: createBook
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/MovieDto'
+              $ref: '#/components/schemas/BookDto'
       responses:
         "201":
-          description: Movie created successfully.
+          description: Book created successfully.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/MovieDto'
+                $ref: '#/components/schemas/BookDto'
         "400":
           $ref: '#/components/responses/BadRequest'
         "500":
@@ -101,27 +101,27 @@ components:
           type: string
         sortDirection:
           $ref: '#/components/schemas/SortDirection'
-          
-    MoviePagingCriteria:
+
+    BookPagingCriteria:
       type: object
       allOf:
         - $ref: '#/components/schemas/PaginationQueryParams'
         - type: object
           properties:
-            sortColumn:
+            sortColumnEnum:
               type: string
               enum:
-                - TITLE
-              default: TITLE
+                - title
+              default: title
     
-    MovieQueryParams:
+    BookQueryParams:
       type: object
       properties:
         title:
           type: string
-          description: Title of the movie to search for
+          description: Title of the book to search for
 
-    MoviePageDto:
+    BookPageDto:
       type: object
       allOf:
         - $ref: "#/components/schemas/PaginationResponse"
@@ -130,10 +130,10 @@ components:
             content:
               type: array
               items:
-                $ref: "#/components/schemas/MovieDto"
+                $ref: "#/components/schemas/BookDto"
               default: [ ]
 
-    MovieDto:
+    BookDto:
       type: object
       required:
         - title
@@ -143,7 +143,7 @@ components:
           format: uuid
         title:
           type: string
-      description: Movie model with all fields directly included.
+      description: Book model with all fields directly included.
   
     PaginationQueryParams:
       type: object
@@ -159,7 +159,7 @@ components:
     SortDirection:
       type: string
       enum: [ "ASC", "DESC" ]
-      default: "DESC"
+      default: "ASC"
 
     # --------- Error Responses ---------
     ErrorResponse:
